# ordn

./: .gitignore  .state  CHANGELOG.md  README.md  cabal.project.freeze  flake.nix  ordn.cabal  sdo.cabal
app/: Main.hs
daily/: daily-2024-06-02.md  daily-2024-06-03.md  daily-2024-06-04.md  daily-2024-06-06.md  daily-2024-06-07.md
docs/: pinga.md  pingatre.md
examples/: config.json
examples/daily/: daily-2024-06-08.md
examples/docs/: mi nuevo documento.md  mi otro documento.md
examples/templates/: daily.md  periodic.md
src/: Ordn.hs
src/Ordn/: Config.hs  Daily.hs  Date.hs  Document.hs  DocumentIO.hs  Markdown.hs  Periodic.hs  PeriodicLog.hs
templates/: daily.md  default.md  other.md  periodic.md
test/: Main.hs
