cabal-version:      3.0
name:               ordn
version:            0.1.0.0
-- synopsis:
-- description:
license:            NONE
author:             artilugio0
maintainer:         artilugio0
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
        Ordn
            Ordn.Markdown
            Ordn.Daily
            Ordn.DocumentIO
            Ordn.Periodic
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.18.2.1,
        directory,
        time
    hs-source-dirs:   src
    default-language: Haskell2010

executable ordn
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.18.2.1,
        ordn

    hs-source-dirs:   app
    default-language: Haskell2010
